--- a/AppBundle/Resources/views/campagne.html.twig
+++ b/AppBundle/Resources/views/campagne.html.twig
@@ -4,7 +4,7 @@
 {{ parent() }}
                 <ul class="menu">
                     <li>
-                        <a href="#">
+                        <a href="campagne">
                             <div class="menuColSelect">
                                 <span class="glyphicon glyphicon-book"></span> Campagne
                             </div>
@@ -28,96 +28,18 @@
                 </div>
                 <div class="tableCampaignOperatorContainer">
                     <table class="table table-bordered table-hover tableCampaignOperator">
+                        {% for campagna in campagne %}
                         <tr>
                             <td>
-                                <a role="button" class="btn btn-default btn-xs" href="contatti">
+                                <a role="button" class="btn btn-default btn-xs" href="contatti/{{ campagna.campaign }}">
                                     <span class="glyphicon glyphicon-th-list"></span>
-                                </a> Acer
+                                </a> {{ campagna.campaign }}
                             </td>
-                            <td>76</td>
-                            <td>13</td>
-                            <td>85</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
                         </tr>
-                        <tr>
-                            <td>
-                                <button type="button" class="btn btn-default btn-xs">
-                                    <span class="glyphicon glyphicon-th-list"></span>
-                                </button> Apple
-                            </td>
-                            <td>36</td>
-                            <td>11</td>
-                            <td>66</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <button type="button" class="btn btn-default btn-xs">
-                                    <span class="glyphicon glyphicon-th-list"></span>
-                                </button> Asus
-                            </td>
-                            <td>48</td>
-                            <td>8</td>
-                            <td>74</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <button type="button" class="btn btn-default btn-xs">
-                                    <span class="glyphicon glyphicon-th-list"></span>
-                                </button> Benq
-                            </td>
-                            <td>52</td>
-                            <td>0</td>
-                            <td>0</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <button type="button" class="btn btn-default btn-xs">
-                                    <span class="glyphicon glyphicon-th-list"></span>
-                                </button> Cooler Master
-                            </td>
-                            <td>96</td>
-                            <td>0</td>
-                            <td>0</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <button type="button" class="btn btn-default btn-xs">
-                                    <span class="glyphicon glyphicon-th-list"></span>
-                                </button> Corsair
-                            </td>
-                            <td>152</td>
-                            <td>0</td>
-                            <td>0</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <button type="button" class="btn btn-default btn-xs">
-                                    <span class="glyphicon glyphicon-th-list"></span>
-                                </button> Dell
-                            </td>
-                            <td>66</td>
-                            <td>0</td>
-                            <td>0</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <button type="button" class="btn btn-default btn-xs">
-                                    <span class="glyphicon glyphicon-th-list"></span>
-                                </button> Enermax
-                            </td>
-                            <td>54</td>
-                            <td>0</td>
-                            <td>0</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <button type="button" class="btn btn-default btn-xs">
-                                    <span class="glyphicon glyphicon-th-list"></span>
-                                </button> Western Digital
-                            </td>
-                            <td>85</td>
-                            <td>0</td>
-                            <td>0</td>
-                        </tr>
+                        {% endfor %}
                     </table>
                 </div>
             </div>
