--- a/AppBundle/Resources/views/nuovo.html.twig
+++ b/AppBundle/Resources/views/nuovo.html.twig
@@ -4,21 +4,21 @@
     {{ parent() }}
                 <ul class="menu">
                     <li>
-                        <a href="report">
+                        <a href="/report">
                             <div class="menuCol">
                                 <span class="glyphicon glyphicon-book"></span> Report
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="operatori">
+                        <a href="/operatori">
                             <div class="menuCol">
                                 <span class="glyphicon glyphicon-user"></span> Operatori
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="/nuovo">
                             <div class="menuColSelect">
                                 <span class="glyphicon glyphicon-plus-sign"></span> Nuovo operatore
                             </div>
@@ -26,8 +26,6 @@
                     </li>
                 </ul>
             {% endblock %}
-                {% block logout %}
-                {% endblock %}
             {% block content %}
             </div>
             <div class="col-md-10 content">
@@ -38,32 +36,22 @@
                             <tr>
                                 <td>
                                     {{ form_start(form) }}
-                                    {{ form_label(form.Email)}}
-                                    {{ form_widget(form.Email)}}
-                                    {{ form_label(form.Password)}}
-                                    {{ form_widget(form.Password)}}
-                                    <!--<label for="email">E-mail</label>
-                                    <input type="email" name="email" id="email" value="" />
-                                    <label for="password">Password</label>
-                                    <input type="password" name="password" id="password" value="" />-->
+                                    {{ form_label(form.email)}}
+                                    {{ form_widget(form.email)}}
+                                    {{ form_label(form.plainPassword)}}
+                                    {{ form_widget(form.plainPassword)}}
                                 </td>
                                 <td>
-                                    {{ form_label(form.Nome)}}
-                                    {{ form_widget(form.Nome)}}
-                                    {{ form_label(form.Cognome)}}
-                                    {{ form_widget(form.Cognome)}}
-                                    <!--<label for="name">Nome</label>
-                                    <input type="text" name="name" id="name" value="" />
-                                    <label for="surname">Cognome</label>
-                                    <input type="text" name="surname" id="surname" value="" />-->
+                                    {{ form_label(form.firstname)}}
+                                    {{ form_widget(form.firstname)}}
+                                    {{ form_label(form.lastname)}}
+                                    {{ form_widget(form.lastname)}}
                                 </td>
                             </tr>
                             <tr>
                                 <td>
                                     <div>
-                                    {{ form_widget(form.Status)}}
-                                    <!--Attivo <input class="inLine" type="radio" name="status" id="active" checked/>
-                                    Inattivo <input class="inLine" type="radio" name="status" id="inactive" />-->
+                                    {{ form_widget(form.status)}}
                                     </div>
                                 </td>
                                 <td>
@@ -71,8 +59,7 @@
                                 </td>
                             </tr>
                         </table>
-                        {{ form_widget(form.Salva, {'attr': {'class': 'btn btn-default saveButton'}})}}
-                        <!--<a role="button" class="btn btn-default saveButton" href="operatori"><span class="glyphicon glyphicon-ok"></span> Salva</a>-->
+                        {{ form_widget(form.save, {'attr': {'class': 'btn btn-default saveButton'}})}}
                     </form>
                     {{ form_end(form)}}
                 </div>
